issues with bullet points not showing up in crome

--- a/scss/custom/do.scss
+++ b/scss/custom/do.scss
@@ -66,6 +66,7 @@ $include-html-classes: false;
 
 				li{
 					float: left;
+					list-style-position: inside;
 					width: 83%;
 				}
 
